Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1325,8 +1325,8 @@
   "pli-tv-kd11:31.1.203": "If it seems appropriate to the Sangha, the Sangha should lift that legal procedure of ejecting him for not making amends for an offense. ",
   "pli-tv-kd11:31.1.204": "This is the motion. ",
   "pli-tv-kd11:31.1.205": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:31.1.206": "The Sangha has done a legal procedure of ejecting the monk Channa for not making amends for an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
-  "pli-tv-kd11:31.1.207": "The Sangha lifts the legal procedure of ejecting him for not making amends for an offense. ",
+  "pli-tv-kd11:31.1.206": "The Sangha has done a legal procedure of ejecting the monk Channa for not making amends for an offense. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:31.1.207": "The Sangha lifts that legal procedure of ejecting him for not making amends for an offense. ",
   "pli-tv-kd11:31.1.208": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:31.1.209": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:31.1.210": "For the second time I speak on this matter. … ",
