Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1332,11 +1332,11 @@
   "pli-tv-kd11:31.1.210": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:31.1.211": "For the third time I speak on this matter. ",
   "pli-tv-kd11:31.1.212": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:31.1.213": "The Sangha has done a legal procedure of ejecting the monk Channa for not making amends for an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
-  "pli-tv-kd11:31.1.214": "The Sangha lifts the legal procedure of ejecting him for not making amends for an offense. ",
+  "pli-tv-kd11:31.1.213": "The Sangha has done a legal procedure of ejecting the monk Channa for not making amends for an offense. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:31.1.214": "The Sangha lifts that legal procedure of ejecting him for not making amends for an offense. ",
   "pli-tv-kd11:31.1.215": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:31.1.216": "Any monk who doesn’t approve should speak up. ",
-  "pli-tv-kd11:31.1.217": "The Sangha has lifted the legal procedure of ejecting the monk Channa for not making amends for an offense. ",
+  "pli-tv-kd11:31.1.217": "The Sangha has lifted that legal procedure of ejecting the monk Channa for not making amends for an offense. ",
   "pli-tv-kd11:31.1.218": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:31.1.219": "The sixth section on the legal procedure of ejection for not making amends for an offense is finished. ",
   "pli-tv-kd11:32.1.0": "7. The legal procedure of ejection for not giving up a bad view ",
