--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1354,7 +1354,7 @@
   "pli-tv-kd11:32.2.4": "The Buddha would never say such a thing. ",
   "pli-tv-kd11:32.2.5": "The Buddha has given many discourses about the obstructive things being obstructive ",
   "pli-tv-kd11:32.2.6": "and how they obstruct one who indulges in them. ",
-  "pli-tv-kd11:32.2.7": "The Buddha has said that there is little enjoyment in worldly pleasures, but much suffering and much trouble, and that the danger in them is greater. ",
+  "pli-tv-kd11:32.2.7": "The Buddha has said that there’s little enjoyment in worldly pleasures, but much suffering and much trouble, and that the danger in them is greater. ",
   "pli-tv-kd11:32.2.8": "The Buddha has said that worldly pleasures are similar to a skeleton, ",
   "pli-tv-kd11:32.2.9": "similar to a piece of meat, ",
   "pli-tv-kd11:32.2.10": "similar to a grass torch, ",
