Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1364,7 +1364,7 @@
   "pli-tv-kd11:32.2.14": "similar to fruits on a tree, ",
   "pli-tv-kd11:32.2.15": "similar to a knife and chopping block, ",
   "pli-tv-kd11:32.2.16": "similar to swords and stakes, ",
-  "pli-tv-kd11:32.2.17": "and similar to a snake’s head; they are much suffering and much trouble, and the danger in them is greater.” ",
+  "pli-tv-kd11:32.2.17": "and similar to a snake’s head. They’re much suffering and much trouble, and the danger in them is greater.” ",
   "pli-tv-kd11:32.2.18": "But even though the monks corrected Ariṭṭha in this way, he stubbornly held on to that bad and erroneous view, and continued to insist on it. ",
   "pli-tv-kd11:32.3.1": "And since they were not able to make him give up that view, they went to the Buddha and told him what had happened. ",
   "pli-tv-kd11:32.3.2": "Soon afterwards the Buddha had the Sangha gathered and questioned Ariṭṭha: ",
