--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1366,7 +1366,7 @@
   "pli-tv-kd11:32.2.16": "similar to swords and stakes, ",
   "pli-tv-kd11:32.2.17": "and similar to a snake’s head. They’re much suffering and much trouble, and the danger in them is greater.” ",
   "pli-tv-kd11:32.2.18": "But even though the monks corrected Ariṭṭha in this way, he stubbornly held on to that bad and erroneous view, and continued to insist on it. ",
-  "pli-tv-kd11:32.3.1": "And since they were not able to make him give up that view, they went to the Buddha and told him what had happened. ",
+  "pli-tv-kd11:32.3.1": "And since they were unable to make him give up that view, they went to the Buddha and told him what had happened. ",
   "pli-tv-kd11:32.3.2": "Soon afterwards the Buddha had the Sangha gathered and questioned Ariṭṭha: ",
   "pli-tv-kd11:32.3.3": "“Is it true, Ariṭṭha, that you have a bad and erroneous view such as this: ",
   "pli-tv-kd11:32.3.4": "‘As I understand the Buddha’s Teaching, the things he calls obstructive are not able to obstruct one who indulges in them’?” ",
