--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1375,8 +1375,8 @@
   "pli-tv-kd11:32.3.7": "Haven’t I given many discourses about the obstructive things being obstructive ",
   "pli-tv-kd11:32.3.8": "and how they obstruct one who indulges in them? ",
   "pli-tv-kd11:32.3.9": "I’ve said that there’s little enjoyment in worldly pleasures, but much suffering and much trouble, and that the danger in them is greater. ",
-  "pli-tv-kd11:32.3.10": "I’ve said that worldly pleasures are similar to a skeleton … ",
-  "pli-tv-kd11:32.3.11": "similar to a piece of meat … ",
+  "pli-tv-kd11:32.3.10": "I’ve said that worldly pleasures are similar to a skeleton, ",
+  "pli-tv-kd11:32.3.11": "similar to a piece of meat, ",
   "pli-tv-kd11:32.3.12": "similar to a grass torch … ",
   "pli-tv-kd11:32.3.13": "similar to a pit of coals … ",
   "pli-tv-kd11:32.3.14": "similar to a dream … ",
