Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1377,10 +1377,10 @@
   "pli-tv-kd11:32.3.9": "I’ve said that there’s little enjoyment in worldly pleasures, but much suffering and much trouble, and that the danger in them is greater. ",
   "pli-tv-kd11:32.3.10": "I’ve said that worldly pleasures are similar to a skeleton, ",
   "pli-tv-kd11:32.3.11": "similar to a piece of meat, ",
-  "pli-tv-kd11:32.3.12": "similar to a grass torch … ",
-  "pli-tv-kd11:32.3.13": "similar to a pit of coals … ",
-  "pli-tv-kd11:32.3.14": "similar to a dream … ",
-  "pli-tv-kd11:32.3.15": "similar to borrowed goods … ",
+  "pli-tv-kd11:32.3.12": "similar to a grass torch, ",
+  "pli-tv-kd11:32.3.13": "similar to a pit of coals, ",
+  "pli-tv-kd11:32.3.14": "similar to a dream, ",
+  "pli-tv-kd11:32.3.15": "similar to borrowed goods, ",
   "pli-tv-kd11:32.3.16": "similar to fruits on a tree … ",
   "pli-tv-kd11:32.3.17": "similar to a knife and chopping block … ",
   "pli-tv-kd11:32.3.18": "similar to swords and stakes … ",
