Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1381,10 +1381,10 @@
   "pli-tv-kd11:32.3.13": "similar to a pit of coals, ",
   "pli-tv-kd11:32.3.14": "similar to a dream, ",
   "pli-tv-kd11:32.3.15": "similar to borrowed goods, ",
-  "pli-tv-kd11:32.3.16": "similar to fruits on a tree … ",
-  "pli-tv-kd11:32.3.17": "similar to a knife and chopping block … ",
-  "pli-tv-kd11:32.3.18": "similar to swords and stakes … ",
-  "pli-tv-kd11:32.3.19": "similar to a snake’s head; they are much suffering and much trouble, and the danger in them is greater. ",
+  "pli-tv-kd11:32.3.16": "similar to fruits on a tree, ",
+  "pli-tv-kd11:32.3.17": "similar to a knife and chopping block, ",
+  "pli-tv-kd11:32.3.18": "similar to swords and stakes, ",
+  "pli-tv-kd11:32.3.19": "and similar to a snake’s head. They’re much suffering and much trouble, and the danger in them is greater. ",
   "pli-tv-kd11:32.3.20": "And yet by misunderstanding, you have misrepresented me, hurt yourself, and made much demerit. ",
   "pli-tv-kd11:32.3.21": "This will be for your long-lasting harm and suffering. ",
   "pli-tv-kd11:32.3.22": "This will affect people’s confidence …” ",
