Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1405,7 +1405,7 @@
   "pli-tv-kd11:32.4.11": "The monk Ariṭṭha, the ex-vulture-killer, has the following bad and erroneous view: ",
   "pli-tv-kd11:32.4.12": "“As I understand the Teaching of the Buddha, the things he calls obstructive are not able to obstruct one who indulges in them.” ",
   "pli-tv-kd11:32.4.13": "He’s not giving up that view. ",
-  "pli-tv-kd11:32.4.14": "The Sangha is does a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
+  "pli-tv-kd11:32.4.14": "The Sangha does a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.15": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:32.4.16": "Any monk who approves of doing this legal procedure ",
   "pli-tv-kd11:32.4.17": "should remain silent. ",
