Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1426,7 +1426,7 @@
   "pli-tv-kd11:32.4.32": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd11:32.4.33": "Monks, you should proclaim from monastery to monastery ",
   "pli-tv-kd11:32.4.34": "that the Sangha has done a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
-  "pli-tv-kd11:32.4.35": "prohibiting him from living with the Sangha. ",
+  "pli-tv-kd11:32.4.35": "prohibiting him from living with the Sangha.” ",
   "pli-tv-kd11:33.1.0": "7.1 The group of twelve on illegitimate legal procedures ",
   "pli-tv-kd11:33.1.1": "“When a legal procedure of ejection for not giving up a bad view has three qualities, it’s illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:33.1.2": "it’s done in the absence of the accused, it’s done without questioning the accused, it’s done without the admission of the accused. ",
