Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1514,7 +1514,7 @@
   "pli-tv-kd11:33.1.69.23": "He shouldn’t stay in the same room in a non-monastery as a regular monk. ",
   "pli-tv-kd11:33.1.69.24": "He shouldn’t stay in the same room in a monastery or a non-monastery as a regular monk. ",
   "pli-tv-kd11:33.1.69.25": "He should get up from his seat when he sees a regular monk. ",
-  "pli-tv-kd11:33.1.69.26": "He shouldn’t dismiss a regular monk, whether inside or outside a dwelling. ",
+  "pli-tv-kd11:33.1.69.26": "He shouldn’t dismiss a regular monk, whether indoors or outdoors. ",
   "pli-tv-kd11:33.1.70": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:33.1.71": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:33.1.72": "He shouldn’t direct a regular monk. ",
