--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1518,7 +1518,7 @@
   "pli-tv-kd11:33.1.70": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:33.1.71": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:33.1.72": "He shouldn’t direct a regular monk. ",
-  "pli-tv-kd11:33.1.73": "He shouldn’t give instructions to a regular monk from a position of authority. ",
+  "pli-tv-kd11:33.1.73": "He shouldn’t give instructions to a regular monk. ",
   "pli-tv-kd11:33.1.74": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:33.1.75": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd11:33.1.76": "He shouldn’t remind a regular monk of an offense. ",
