--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1535,7 +1535,7 @@
   "pli-tv-kd11:34.1.9": "“It’s true, Sir.” ",
   "pli-tv-kd11:34.1.10": "The Buddha rebuked him … ",
   "pli-tv-kd11:34.1.11": "“It’s not suitable … ",
-  "pli-tv-kd11:34.1.12": "How can that fool disrobe after the Sangha has done a procedure of ejecting him for not giving up a bad view? ",
+  "pli-tv-kd11:34.1.12": "How can that foolish person disrobe after the Sangha has done a procedure of ejecting him for not giving up a bad view? ",
   "pli-tv-kd11:34.1.13": "This will affect people’s confidence …” ",
   "pli-tv-kd11:34.1.14": "After rebuking him … ",
   "pli-tv-kd11:34.1.15": "he gave a teaching and addressed the monks: ",
