--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1567,11 +1567,11 @@
   "pli-tv-kd11:35.1.5": "and a third time. ",
   "pli-tv-kd11:35.1.6": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:35.1.7": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:35.1.8": "The Sangha has done a legal procedure of ejecting monk so-and-so for not giving up a bad view. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
-  "pli-tv-kd11:35.1.9": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of ejecting him for not giving up a bad view. ",
+  "pli-tv-kd11:35.1.8": "The Sangha has done a legal procedure of ejecting monk so-and-so for not giving up a bad view. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:35.1.9": "If it seems appropriate to the Sangha, the Sangha should lift that legal procedure of ejecting him for not giving up a bad view. ",
   "pli-tv-kd11:35.1.10": "This is the motion. ",
   "pli-tv-kd11:35.1.11": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:35.1.12": "The Sangha has done a legal procedure of ejecting monk so-and-so for not giving up a bad view. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
+  "pli-tv-kd11:35.1.12": "The Sangha has done a legal procedure of ejecting monk so-and-so for not giving up a bad view. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
   "pli-tv-kd11:35.1.13": "The Sangha lifts the legal procedure of ejecting him for not giving up a bad view. ",
   "pli-tv-kd11:35.1.14": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:35.1.15": "Any monk who doesn’t approve should speak up. ",
