Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1578,11 +1578,11 @@
   "pli-tv-kd11:35.1.16": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:35.1.17": "For the third time I speak on this matter. ",
   "pli-tv-kd11:35.1.18": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:35.1.19": "The Sangha has done a legal procedure of ejecting monk so-and-so for not giving up a bad view. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
-  "pli-tv-kd11:35.1.20": "The Sangha lifts the legal procedure of ejecting him for not giving up a bad view. ",
+  "pli-tv-kd11:35.1.19": "The Sangha has done a legal procedure of ejecting monk so-and-so for not giving up a bad view. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:35.1.20": "The Sangha lifts that legal procedure of ejecting him for not giving up a bad view. ",
   "pli-tv-kd11:35.1.21": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:35.1.22": "Any monk who doesn’t approve should speak up. ",
-  "pli-tv-kd11:35.1.23": "The Sangha has lifted the legal procedure of ejecting monk so-and-so for not giving up a bad view. ",
+  "pli-tv-kd11:35.1.23": "The Sangha has lifted that legal procedure of ejecting monk so-and-so for not giving up a bad view. ",
   "pli-tv-kd11:35.1.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:35.1.25": "The seventh section on the legal procedure of ejection for not giving up a bad view is finished. ",
   "pli-tv-kd11:35.1.26": "The first chapter on legal procedures is finished. In this chapter there are seven topics. ",
