--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1586,5 +1586,7 @@
   "pli-tv-kd11:35.1.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:35.1.25": "The seventh section on the legal procedure of ejection for not giving up a bad view is finished. ",
   "pli-tv-kd11:35.1.26": "The first chapter on legal procedures is finished. In this chapter there are seven topics. ",
+  "pli-tv-kd11:35.1.27": "This is the summary: ",
+  "pli-tv-kd11:35.1.28": "“The monks Paṇḍu and Lohitaka, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
