Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1588,5 +1588,7 @@
   "pli-tv-kd11:35.1.26": "The first chapter on legal procedures is finished. In this chapter there are seven topics. ",
   "pli-tv-kd11:35.1.27": "This is the summary: ",
   "pli-tv-kd11:35.1.28": "“The monks Paṇḍu and Lohitaka, ",
+  "pli-tv-kd11:35.1.29": "Themselves quarrelsome; ",
+  "pli-tv-kd11:35.1.30": "They went to those of the same kind, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
