Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1590,5 +1590,8 @@
   "pli-tv-kd11:35.1.28": "“The monks Paṇḍu and Lohitaka, ",
   "pli-tv-kd11:35.1.29": "Themselves quarrelsome; ",
   "pli-tv-kd11:35.1.30": "They went to those of the same kind, ",
+  "pli-tv-kd11:35.1.31": "And encouraged quarrels. ",
+  "pli-tv-kd11:35.1.32": "They gave rise to new ones, ",
+  "pli-tv-kd11:35.1.33": "And worsened the existing ones; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
