--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1593,5 +1593,9 @@
   "pli-tv-kd11:35.1.31": "And encouraged quarrels. ",
   "pli-tv-kd11:35.1.32": "They gave rise to new ones, ",
   "pli-tv-kd11:35.1.33": "And worsened the existing ones; ",
+  "pli-tv-kd11:35.1.34": "The good monks of few desires, ",
+  "pli-tv-kd11:35.1.35": "Criticised. The One who Shows, ",
+  "pli-tv-kd11:35.1.36": "The Buddha, standing in the True Dhamma, ",
+  "pli-tv-kd11:35.1.37": "Independent, the Supreme Person; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
