Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1597,5 +1597,7 @@
   "pli-tv-kd11:35.1.35": "Criticised. The One who Shows, ",
   "pli-tv-kd11:35.1.36": "The Buddha, standing in the True Dhamma, ",
   "pli-tv-kd11:35.1.37": "Independent, the Supreme Person; ",
+  "pli-tv-kd11:35.1.38": "The Victor: at Sāvatthī he ordered ",
+  "pli-tv-kd11:35.1.39": "The procedure of condemnation. ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
