--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1599,5 +1599,6 @@
   "pli-tv-kd11:35.1.37": "Independent, the Supreme Person; ",
   "pli-tv-kd11:35.1.38": "The Victor: at Sāvatthī he ordered ",
   "pli-tv-kd11:35.1.39": "The procedure of condemnation. ",
+  "pli-tv-kd11:35.1.40": "In the absence, without questioning, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
