Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1600,5 +1600,7 @@
   "pli-tv-kd11:35.1.38": "The Victor: at Sāvatthī he ordered ",
   "pli-tv-kd11:35.1.39": "The procedure of condemnation. ",
   "pli-tv-kd11:35.1.40": "In the absence, without questioning, ",
+  "pli-tv-kd11:35.1.41": "Without admission, and done against ",
+  "pli-tv-kd11:35.1.42": "One without offense, not clearable by confession, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
