Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1602,5 +1602,8 @@
   "pli-tv-kd11:35.1.40": "In the absence, without questioning, ",
   "pli-tv-kd11:35.1.41": "Without admission, and done against ",
   "pli-tv-kd11:35.1.42": "One without offense, not clearable by confession, ",
+  "pli-tv-kd11:35.1.43": "Done against one who has confessed. ",
+  "pli-tv-kd11:35.1.44": "Not having accused, not having reminded, ",
+  "pli-tv-kd11:35.1.45": "And done without having charged; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
