Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1605,5 +1605,8 @@
   "pli-tv-kd11:35.1.43": "Done against one who has confessed. ",
   "pli-tv-kd11:35.1.44": "Not having accused, not having reminded, ",
   "pli-tv-kd11:35.1.45": "And done without having charged; ",
+  "pli-tv-kd11:35.1.46": "In the absence, with illegitimate, ",
+  "pli-tv-kd11:35.1.47": "And also done with an incomplete assembly. ",
+  "pli-tv-kd11:35.1.48": "Without questioning, with illegitimate, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
