Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1608,5 +1608,7 @@
   "pli-tv-kd11:35.1.46": "In the absence, with illegitimate, ",
   "pli-tv-kd11:35.1.47": "And also done with an incomplete assembly. ",
   "pli-tv-kd11:35.1.48": "Without questioning, with illegitimate, ",
+  "pli-tv-kd11:35.1.49": "Again done with an incomplete assembly. ",
+  "pli-tv-kd11:35.1.50": "Without admission, with illegitimate, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
