--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1610,5 +1610,8 @@
   "pli-tv-kd11:35.1.48": "Without questioning, with illegitimate, ",
   "pli-tv-kd11:35.1.49": "Again done with an incomplete assembly. ",
   "pli-tv-kd11:35.1.50": "Without admission, with illegitimate, ",
+  "pli-tv-kd11:35.1.51": "And also done with an incomplete assembly. ",
+  "pli-tv-kd11:35.1.52": "One without offense, with illegitimate, ",
+  "pli-tv-kd11:35.1.53": "And also done with an incomplete assembly. ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
