Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1615,5 +1615,7 @@
   "pli-tv-kd11:35.1.53": "And also done with an incomplete assembly. ",
   "pli-tv-kd11:35.1.54": "Not clearable by confession, ",
   "pli-tv-kd11:35.1.55": "And illegitimately, with an incomplete assembly. ",
+  "pli-tv-kd11:35.1.56": "Against one who has confessed, with illegitimate, ",
+  "pli-tv-kd11:35.1.57": "And so also with incomplete assembly; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
