--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1617,5 +1617,7 @@
   "pli-tv-kd11:35.1.55": "And illegitimately, with an incomplete assembly. ",
   "pli-tv-kd11:35.1.56": "Against one who has confessed, with illegitimate, ",
   "pli-tv-kd11:35.1.57": "And so also with incomplete assembly; ",
+  "pli-tv-kd11:35.1.58": "Not having accused, with illegitimate, ",
+  "pli-tv-kd11:35.1.59": "And so also with incomplete assembly; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
