Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1619,5 +1619,8 @@
   "pli-tv-kd11:35.1.57": "And so also with incomplete assembly; ",
   "pli-tv-kd11:35.1.58": "Not having accused, with illegitimate, ",
   "pli-tv-kd11:35.1.59": "And so also with incomplete assembly; ",
+  "pli-tv-kd11:35.1.60": "Not having reminded, with illegitimate, ",
+  "pli-tv-kd11:35.1.61": "And so also with incomplete assembly; ",
+  "pli-tv-kd11:35.1.62": "Not having charged, with illegitimate, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
