--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1622,5 +1622,8 @@
   "pli-tv-kd11:35.1.60": "Not having reminded, with illegitimate, ",
   "pli-tv-kd11:35.1.61": "And so also with incomplete assembly; ",
   "pli-tv-kd11:35.1.62": "Not having charged, with illegitimate, ",
+  "pli-tv-kd11:35.1.63": "And so also with incomplete assembly. ",
+  "pli-tv-kd11:35.1.64": "Just as the method of the dark section, ",
+  "pli-tv-kd11:35.1.65": "One should understand the bright section; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
