Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1625,5 +1625,11 @@
   "pli-tv-kd11:35.1.63": "And so also with incomplete assembly. ",
   "pli-tv-kd11:35.1.64": "Just as the method of the dark section, ",
   "pli-tv-kd11:35.1.65": "One should understand the bright section; ",
+  "pli-tv-kd11:35.1.66": "And the Sangha wishing, ",
+  "pli-tv-kd11:35.1.67": "Might do condemnation against one: ",
+  "pli-tv-kd11:35.1.68": "Quarrelsome, ignorant, socializing, ",
+  "pli-tv-kd11:35.1.69": "In the higher morality, in the higher conduct; ",
+  "pli-tv-kd11:35.1.70": "For those failed in view, ",
+  "pli-tv-kd11:35.1.71": "The Sangha might do condemnation. ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
