Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1631,5 +1631,8 @@
   "pli-tv-kd11:35.1.69": "In the higher morality, in the higher conduct; ",
   "pli-tv-kd11:35.1.70": "For those failed in view, ",
   "pli-tv-kd11:35.1.71": "The Sangha might do condemnation. ",
+  "pli-tv-kd11:35.1.72": "And the Buddha, the Teaching, the Sangha, ",
+  "pli-tv-kd11:35.1.73": "Whoever dispraises them; ",
+  "pli-tv-kd11:35.1.74": "And against three kinds of monks, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
