--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1635,5 +1635,6 @@
   "pli-tv-kd11:35.1.73": "Whoever dispraises them; ",
   "pli-tv-kd11:35.1.74": "And against three kinds of monks, ",
   "pli-tv-kd11:35.1.75": "The Sangha might carry out condemnation: ",
+  "pli-tv-kd11:35.1.76": "The quarrelsome, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
