Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1636,5 +1636,9 @@
   "pli-tv-kd11:35.1.74": "And against three kinds of monks, ",
   "pli-tv-kd11:35.1.75": "The Sangha might carry out condemnation: ",
   "pli-tv-kd11:35.1.76": "The quarrelsome, ",
+  "pli-tv-kd11:35.1.77": "The ignorant, the one attached to socializing; ",
+  "pli-tv-kd11:35.1.78": "In the higher morality, in the higher conduct; ",
+  "pli-tv-kd11:35.1.79": "Just so about view. ",
+  "pli-tv-kd11:35.1.80": "And the Buddha, the Teaching, the Sangha, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
