Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1640,5 +1640,8 @@
   "pli-tv-kd11:35.1.78": "In the higher morality, in the higher conduct; ",
   "pli-tv-kd11:35.1.79": "Just so about view. ",
   "pli-tv-kd11:35.1.80": "And the Buddha, the Teaching, the Sangha, ",
+  "pli-tv-kd11:35.1.81": "Whoever dispraises them; ",
+  "pli-tv-kd11:35.1.82": "Who has had a legal procedure of condemnation done against himself, ",
+  "pli-tv-kd11:35.1.83": "Should conduct himself properly thus: ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
