Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1643,5 +1643,7 @@
   "pli-tv-kd11:35.1.81": "Whoever dispraises them; ",
   "pli-tv-kd11:35.1.82": "Who has had a legal procedure of condemnation done against himself, ",
   "pli-tv-kd11:35.1.83": "Should conduct himself properly thus: ",
+  "pli-tv-kd11:35.1.84": "Full ordination, formal support, ",
+  "pli-tv-kd11:35.1.85": "A novice monk attending on; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
