--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1645,5 +1645,7 @@
   "pli-tv-kd11:35.1.83": "Should conduct himself properly thus: ",
   "pli-tv-kd11:35.1.84": "Full ordination, formal support, ",
   "pli-tv-kd11:35.1.85": "A novice monk attending on; ",
+  "pli-tv-kd11:35.1.86": "Instruction, even if appointed, ",
+  "pli-tv-kd11:35.1.87": "He should not do. Against the one condemnation was done, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
