Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1647,5 +1647,7 @@
   "pli-tv-kd11:35.1.85": "A novice monk attending on; ",
   "pli-tv-kd11:35.1.86": "Instruction, even if appointed, ",
   "pli-tv-kd11:35.1.87": "He should not do. Against the one condemnation was done, ",
+  "pli-tv-kd11:35.1.88": "He should not commit that offense, ",
+  "pli-tv-kd11:35.1.89": "Or one similar, or one beyond; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
