--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1649,5 +1649,9 @@
   "pli-tv-kd11:35.1.87": "He should not do. Against the one condemnation was done, ",
   "pli-tv-kd11:35.1.88": "He should not commit that offense, ",
   "pli-tv-kd11:35.1.89": "Or one similar, or one beyond; ",
+  "pli-tv-kd11:35.1.90": "And the procedure, and also the doers, ",
+  "pli-tv-kd11:35.1.91": "He should not criticize those. ",
+  "pli-tv-kd11:35.1.92": "The observance, the invitation, ",
+  "pli-tv-kd11:35.1.93": "He should not cancel for an regular monk; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
