Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1653,5 +1653,8 @@
   "pli-tv-kd11:35.1.91": "He should not criticize those. ",
   "pli-tv-kd11:35.1.92": "The observance, the invitation, ",
   "pli-tv-kd11:35.1.93": "He should not cancel for an regular monk; ",
+  "pli-tv-kd11:35.1.94": "Directing, instructing, ",
+  "pli-tv-kd11:35.1.95": "Permission, and with accusing. ",
+  "pli-tv-kd11:35.1.96": "Reminding, and associating, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
