Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1659,5 +1659,7 @@
   "pli-tv-kd11:35.1.97": "He should not do such things; ",
   "pli-tv-kd11:35.1.98": "Full ordination, formal support, ",
   "pli-tv-kd11:35.1.99": "A novice monk attending on. ",
+  "pli-tv-kd11:35.1.100": "Instruction, even if appointed, ",
+  "pli-tv-kd11:35.1.101": "With five factors, it should not lift; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
