Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1661,5 +1661,8 @@
   "pli-tv-kd11:35.1.99": "A novice monk attending on. ",
   "pli-tv-kd11:35.1.100": "Instruction, even if appointed, ",
   "pli-tv-kd11:35.1.101": "With five factors, it should not lift; ",
+  "pli-tv-kd11:35.1.102": "And should not commit that offense, ",
+  "pli-tv-kd11:35.1.103": "Or one similar, or one beyond. ",
+  "pli-tv-kd11:35.1.104": "And the procedure, and also the doers, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
