Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1664,5 +1664,8 @@
   "pli-tv-kd11:35.1.102": "And should not commit that offense, ",
   "pli-tv-kd11:35.1.103": "Or one similar, or one beyond. ",
   "pli-tv-kd11:35.1.104": "And the procedure, and also the doers, ",
+  "pli-tv-kd11:35.1.105": "Criticizing, it should not lift; ",
+  "pli-tv-kd11:35.1.106": "The observance, the invitation, ",
+  "pli-tv-kd11:35.1.107": "And directing, instructing. ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
