Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1667,5 +1667,8 @@
   "pli-tv-kd11:35.1.105": "Criticizing, it should not lift; ",
   "pli-tv-kd11:35.1.106": "The observance, the invitation, ",
   "pli-tv-kd11:35.1.107": "And directing, instructing. ",
+  "pli-tv-kd11:35.1.108": "Permission, and accusing, ",
+  "pli-tv-kd11:35.1.109": "Reminding, associating; ",
+  "pli-tv-kd11:35.1.110": "Whoever is engaged in these eight factors, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
