Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1670,5 +1670,8 @@
   "pli-tv-kd11:35.1.108": "Permission, and accusing, ",
   "pli-tv-kd11:35.1.109": "Reminding, associating; ",
   "pli-tv-kd11:35.1.110": "Whoever is engaged in these eight factors, ",
+  "pli-tv-kd11:35.1.111": "The condemnation should not be lifted. ",
+  "pli-tv-kd11:35.1.112": "Just as with the method of the dark section, ",
+  "pli-tv-kd11:35.1.113": "One should understand the bright section; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
