Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1673,5 +1673,9 @@
   "pli-tv-kd11:35.1.111": "The condemnation should not be lifted. ",
   "pli-tv-kd11:35.1.112": "Just as with the method of the dark section, ",
   "pli-tv-kd11:35.1.113": "One should understand the bright section; ",
+  "pli-tv-kd11:35.1.114": "Ignorant, with many offenses, ",
+  "pli-tv-kd11:35.1.115": "And socializing, Seyyaso. ",
+  "pli-tv-kd11:35.1.116": "The procedure of demotion was ordered, ",
+  "pli-tv-kd11:35.1.117": "By the Fully Awakened One, the Great Sage; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
