Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1677,5 +1677,9 @@
   "pli-tv-kd11:35.1.115": "And socializing, Seyyaso. ",
   "pli-tv-kd11:35.1.116": "The procedure of demotion was ordered, ",
   "pli-tv-kd11:35.1.117": "By the Fully Awakened One, the Great Sage; ",
+  "pli-tv-kd11:35.1.118": "Two monks at Kīṭāgiri, ",
+  "pli-tv-kd11:35.1.119": "Assaji and Punabbasuka. ",
+  "pli-tv-kd11:35.1.120": "And many kinds of misconduct, ",
+  "pli-tv-kd11:35.1.121": "They did without restraint; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
