Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1681,5 +1681,9 @@
   "pli-tv-kd11:35.1.119": "Assaji and Punabbasuka. ",
   "pli-tv-kd11:35.1.120": "And many kinds of misconduct, ",
   "pli-tv-kd11:35.1.121": "They did without restraint; ",
+  "pli-tv-kd11:35.1.122": "To be banished, the Fully Awakened One, ",
+  "pli-tv-kd11:35.1.123": "Procedure, at Sāvatthī, the Victor; ",
+  "pli-tv-kd11:35.1.124": "Sudhamma at Macchikāsaṇḍa, ",
+  "pli-tv-kd11:35.1.125": "Was staying with Citta. ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
