Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1686,5 +1686,6 @@
   "pli-tv-kd11:35.1.124": "Sudhamma at Macchikāsaṇḍa, ",
   "pli-tv-kd11:35.1.125": "Was staying with Citta. ",
   "pli-tv-kd11:35.1.126": "He abused as low status,  ",
+  "pli-tv-kd11:35.1.127": "Sudhamma, the law follower Citta; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
