Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1687,5 +1687,8 @@
   "pli-tv-kd11:35.1.125": "Was staying with Citta. ",
   "pli-tv-kd11:35.1.126": "He abused as low status,  ",
   "pli-tv-kd11:35.1.127": "Sudhamma, the law follower Citta; ",
+  "pli-tv-kd11:35.1.128": "The procedure of reconciliation, ",
+  "pli-tv-kd11:35.1.129": "The Buddha ordered. ",
+  "pli-tv-kd11:35.1.130": "The monk Channa at Kosambī, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
