Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1690,5 +1690,10 @@
   "pli-tv-kd11:35.1.128": "The procedure of reconciliation, ",
   "pli-tv-kd11:35.1.129": "The Buddha ordered. ",
   "pli-tv-kd11:35.1.130": "The monk Channa at Kosambī, ",
+  "pli-tv-kd11:35.1.131": "Did not wish to see his offense; ",
+  "pli-tv-kd11:35.1.132": "To eject for not recognizing, ",
+  "pli-tv-kd11:35.1.133": "The Supreme Victor ordered. ",
+  "pli-tv-kd11:35.1.134": "Channa that same offense, ",
+  "pli-tv-kd11:35.1.135": "Did not wish to make amends; ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
