Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1695,5 +1695,10 @@
   "pli-tv-kd11:35.1.133": "The Supreme Victor ordered. ",
   "pli-tv-kd11:35.1.134": "Channa that same offense, ",
   "pli-tv-kd11:35.1.135": "Did not wish to make amends; ",
+  "pli-tv-kd11:35.1.136": "Ejection for not making amends, ",
+  "pli-tv-kd11:35.1.137": "The Leader ordered. ",
+  "pli-tv-kd11:35.1.138": "The bad view of Ariṭṭha, ",
+  "pli-tv-kd11:35.1.139": "Was attached to because of ignorance; ",
+  "pli-tv-kd11:35.1.140": "For not giving up a bad view, ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
 }
